E3-2554: Corrected repeating arrows on sortable tables

--- a/ui/web/main/src/web/stylesheets/bluerobot.css
+++ b/ui/web/main/src/web/stylesheets/bluerobot.css
@@ -241,6 +241,7 @@ table.displaytag th a:hover {
 
 table.displaytag th.sorted a, th.sortable a {
     background-position: right;
+    background-repeat: no-repeat;
     display: block;
 }
 
